force-app/main/default/objects/HR_Alert__c/HR_Alert__c.object-meta.xml
<CustomObject>
    <description>Confidential HR alert record created for Red-risk employees. The employee never sees this record.</description>
    <label>HR Alert</label>
    <nameField>
        <displayFormat>HRA-{0000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>