force-app/main/default/objects/HR_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>Type of HR alert generated by the agent.</description>
    <label>Alert Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burnout Risk - Red</fullName>
                <default>true</default>
                <label>Burnout Risk - Red</label>
            </value>
            <value>
                <fullName>Burnout Risk - Amber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>