force-app/main/default/objects/HR_Alert__c/fields/Confidential_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Notes__c</fullName>
    <description>Internal notes about the burnout risk assessment. Never visible to the employee.</description>
    <label>Confidential Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>