force-app/main/default/objects/HR_Alert__c/fields/Employee_Activity__c.field-meta.xml
<CustomField>
    <fullName>Employee_Activity__c</fullName>
    <description>Link to the EmployeeActivity record that triggered this alert.</description>
    <label>Employee Activity</label>
    <referenceTo>EmployeeActivity__c</referenceTo>
    <relationshipLabel>HR Alerts</relationshipLabel>
    <relationshipName>HR_Alerts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>